--- a/public/complements/styles/home.css
+++ b/public/complements/styles/home.css
@@ -3,6 +3,27 @@
 --color-black: #151414;
 --color-white: #f3f2f2;
 }
+
+/* fonts select */
+@font-face {
+	font-family: "matter-medium";
+	src: url("./fonts/matter-font/Matter-Medium.ttf") format("truetype");
+}
+
+@font-face {
+	font-family: "aero";
+	src: url("./fonts/aeroxys/Aeroxys.ttf") format("truetype");
+}
+
+@font-face {
+	font-family: "nevol";
+	src: url("./fonts/nevolasty/Nevolasty-Light.otf") format("truetype");
+}
+
+@font-face {
+	font-family: "arame";
+	src: url("./fonts/arame/Arame-Thin.ttf") format("truetype");
+}
 body {
     margin: 0;
     padding: 0;
@@ -37,6 +58,8 @@ nav ul li {
 nav ul li a {
     text-decoration: none;
     color: var(--color-white);
+    font-family: "arame";
+    font-size: 1.1em;
     padding: 15px 20px;
     display: block;
 }
@@ -85,9 +108,10 @@ nav ul li:hover .dropdown {
 }
 
 h1 {
-    font-size: 3em;
+    font-size: 9em;
     margin: 0;
     color: var(--color-white);
+    font-family: "aero";
 }
 
 
