--- a/public/complements/styles/dashboard.css
+++ b/public/complements/styles/dashboard.css
@@ -1,6 +1,7 @@
 :root {
     --color-main: #d60b0b;
     --color-black: #151414;
+    --color-semiblack: #202020;
     --color-white: #f3f2f2;
     --color-grey: #333;
   }
@@ -25,19 +26,29 @@
     font-family: "arame";
     src: url("./fonts/arame/Arame-Thin.ttf") format("truetype");
   }
-  
-  body {
-    margin: 0;
-    padding: 0;
-    font-family: "matter-medium";
-    background-color: var(--color-black);
-    color: var(--color-white);
+
+body {
     display: flex;
     flex-direction: column;
+    align-items: center;
     height: 100vh;
+    margin: 0;
+    background-color: var(--color-black);
+    color: var(--color-white);
+    font-family: "matter-medium", sans-serif;
+}
+
+.header a {
+    position: absolute;
+    top: 11px;
+    left: 20px;
+    color: var(--color-main);
+    font-size: 1.3em;
+    font-family: "aero";
+    text-decoration: none;
   }
   
-  nav {
+nav {
     width: 100%;
     position: fixed;
     top: 0;
@@ -48,40 +59,45 @@
     padding: 10px 20px;
     background-color: var(--color-black);
     border-bottom: 1px solid var(--color-grey);
-  }
-  
-  nav .logo {
-    font-family: "aero";
-    font-size: 2.5em;
+}
+
+.header a {
+    position: absolute;
+    top: 11px;
+    left: 20px;
     color: var(--color-main);
+    font-size: 1.6em;
+    font-weight: 100;
+    font-family: "aero";
+    text-decoration: none;
   }
-  
-  nav ul {
+
+nav ul {
     list-style: none;
     margin: 0;
     padding: 0;
     display: flex;
-  }
-  
-  nav ul li {
+}
+
+nav ul li {
     position: relative;
     margin: 0 15px;
-  }
-  
-  nav ul li a {
+}
+
+nav ul li a {
     text-decoration: none;
     color: var(--color-white);
     font-family: "matter-medium";
     font-size: 1.1em;
     padding: 15px 20px;
     display: block;
-  }
-  
-  nav ul li a:hover {
+}
+
+nav ul li a:hover {
     color: var(--color-main);
-  }
-  
-  nav ul li .dropdown {
+}
+
+nav ul li .dropdown {
     display: none;
     position: absolute;
     top: 100%;
@@ -94,86 +110,57 @@
     list-style: none;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
     z-index: 1000;
-  }
-  
-  nav ul li .dropdown li {
+}
+
+nav ul li .dropdown li {
     width: 200px;
-  }
-  
-  nav ul li .dropdown li a {
+}
+
+nav ul li .dropdown li a {
     padding: 10px 10px;
     color: var(--color-white);
-  }
-  
-  nav ul li .dropdown li a:hover {
+}
+
+nav ul li .dropdown li a:hover {
     background-color: #575757;
     border-radius: 5px;
-  }
-  
-  nav ul li:hover .dropdown {
+}
+
+nav ul li:hover .dropdown {
     display: block;
-  }
-  
-  .intro {
+}
+
+.profile-container {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-    height: 100vh;
-    padding-top: 60px;
-    /* Para compensar el navbar fijo */
-    color: var(--color-white);
-  }
-  
-  .intro-text h1 {
-    font-size: 3em;
-    font-family: "arame";
-    margin-bottom: 20px;
-    overflow: hidden; /* Para asegurar que el texto no se desborde */
-    white-space: nowrap; /* Evita el salto de línea */
-    animation: typing 3s steps(35, end), blink-caret 0.75s step-end infinite; /* Animación de tipeo y parpadeo */
-  
-    /* Estilo adicional para el cursor */
-    border-right: 4px solid var(--color-white); /* Efecto cursor */
-    padding: 1px;
-  }
-  
-  @keyframes typing {
-    from { width: 0; }
-    to { width: 100%; }
-  }
-  
-  @keyframes blink-caret {
-    from, to { border-color: transparent; }
-    50% { border-color: var(--color-white) }
-  }
-  
-  
-  
-  .intro-text p {
-    font-size: 1.2em;
-    font-family: "matter-medium";
-  }
-  
-  .buttons {
-    margin-top: 20px;
-  }
-  
-  .buttons .btn {
-    background-color: var(--color-main);
-    color: var(--color-white);
-    padding: 10px 20px;
-    text-decoration: none;
-    border-radius: 5px;
-    margin-right: 10px;
-    transition: background-color 0.3s;
-  }
-  
-  .buttons .btn:hover {
-    background-color: var(--color-grey);
-  }
-  
-  .intro-image img {
-    max-width: 100%;
+    justify-content: center;
+    margin-top: 100px;
+    background: linear-gradient(45deg, #333 0%, #151414 100%);
+    border: 1px solid #454545;
+    padding: 20px;
     border-radius: 10px;
-    margin-left: 5%;
-  }
+    width: 80%;
+    max-width: 600px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.profile-container h1 {
+    font-size: 2rem;
+    color: var(--color-white);
+    margin: 0;
+    font-family: "arame";
+}
+
+.profile-info {
+    font-family: "Matter-medium", Courier, monospace;
+    font-size: 1.2rem;
+    margin-top: 20px;
+    width: 100%;
+    white-space: pre;
+    color: var(--color-white);
+}
+
+strong {
+    color: var(--color-main); /* Color de los textos en negrita */
+}
