--- a/public/complements/styles/home.css
+++ b/public/complements/styles/home.css
@@ -119,7 +119,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    padding-top: 60px;
+    padding-top: 10rem;
     /* Para compensar el navbar fijo */
     color: var(--color-white);
   }
@@ -175,5 +175,71 @@
   .intro-image img {
     max-width: 100%;
     border-radius: 10px;
+    padding-top: 7rem;
     margin-left: 5%;
   }
+
+  /* Agrega al final de tu archivo CSS */
+.section-header {
+  padding-top: 5%;
+  text-align: center;
+  margin: 50px 0;
+}
+
+.section-header h2 {
+  font-size: 2.5em;
+  font-family: "arame";
+  color: var(--color-main);
+}
+
+.section-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.text-image-block {
+  display: flex;
+  align-items: center;
+  margin: 50px 0;
+  padding: 20px;
+  width: 80%;
+  border: 1px solid var(--color-grey);
+  border-radius: 10px;
+}
+
+.text-image-block:nth-child(even) {
+  flex-direction: row-reverse;
+}
+
+.text {
+  flex: 1;
+  margin: 0 20px;
+}
+
+.text h3 {
+  font-size: 1.8em;
+  font-family: "arame";
+  margin-bottom: 20px;
+}
+
+.text p {
+  font-size: 1.2em;
+  font-family: "matter-medium";
+}
+
+.image {
+  flex: 1;
+  text-align: center;
+}
+
+.image img {
+  max-width: 100%;
+  border-radius: 10px;
+}
+
+hr {
+  width: 80%;
+  margin: 50px auto;
+  border: 1px solid var(--color-grey);
+}
