--- a/public/complements/styles/home.css
+++ b/public/complements/styles/home.css
@@ -25,7 +25,24 @@
     font-family: "arame";
     src: url("./fonts/arame/Arame-Thin.ttf") format("truetype");
   }
+
+  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
   
+  *{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+    text-decoration: none;
+    border: none;
+    outline: none;
+    scroll-behavior: smooth;
+  }
+
+
+  html {
+    scroll-behavior: smooth;
+}
   body {
     margin: 0;
     padding: 0;
@@ -35,6 +52,7 @@
     display: flex;
     flex-direction: column;
     height: 100vh;
+
   }
   
   nav {
@@ -116,25 +134,30 @@
   
   .intro {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-between; /* Distribuye el espacio entre .intro-text y .intro-image */
+    align-items: flex-start; /* Alinea el contenido hacia arriba */
     height: 100vh;
-    padding-top: 10rem;
-    /* Para compensar el navbar fijo */
+    padding-top: 22rem; /* Ajusta según tu diseño */
     color: var(--color-white);
-  }
+}
+
+
+
+.intro-text {
+  width: 45%; /* Ajusta el ancho del texto según tu diseño */
+  margin-left: 5%; /* Mueve el contenido hacia la izquierda */
+  margin-top: 3%; /* Ajusta según tu diseño */
+}
   
   .intro-text h1 {
     font-size: 3em;
     font-family: "arame";
-    margin-bottom: 20px;
     overflow: hidden; /* Para asegurar que el texto no se desborde */
     white-space: nowrap; /* Evita el salto de línea */
     animation: typing 3s steps(35, end), blink-caret 0.75s step-end infinite; /* Animación de tipeo y parpadeo */
-  
     /* Estilo adicional para el cursor */
     border-right: 4px solid var(--color-white); /* Efecto cursor */
-    padding: 1px;
+    margin-bottom: 1rem;
   }
   
   @keyframes typing {
@@ -171,17 +194,48 @@
   .buttons .btn:hover {
     background-color: var(--color-grey);
   }
-  
-  .intro-image img {
-    max-width: 100%;
-    border-radius: 10px;
-    padding-top: 7rem;
-    margin-left: 5%;
+
+  .intro-image {
+    width: 45%; /* Ajusta el ancho de la imagen según tu diseño */
+    text-align: right; /* Alinea la imagen hacia la derecha */
+    margin-right: 15rem;
+    margin-top: -2rem;
+}
+
+.intro-image img {
+  width: 45%; /* Asegura que la imagen no supere el 100% del ancho del contenedor */
+  height: auto; /* Permite que la altura se ajuste automáticamente */
+  border-radius: 10px;
+
+}
+
+
+.scroll-down {
+  position: absolute;
+  bottom: 20px; /* Ajusta según tu diseño */
+  left: 50%; /* Centra la flecha horizontalmente */
+  transform: translateX(-50%); /* Centra la flecha horizontalmente */
+  text-align: center;
+  animation: bounce 2s infinite; /* Animación de rebote */
+}
+
+.scroll-down i {
+  font-size: 1.1em;
+  color: var(--color-white);
+}
+
+@keyframes bounce {
+  0%, 100% {
+      transform: translateY(0);
   }
+  50% {
+      transform: translateY(-10px);
+  }
+}
 
   /* Agrega al final de tu archivo CSS */
 .section-header {
-  padding-top: 5%;
+  padding-top: 10%;
   text-align: center;
   margin: 50px 0;
 }
