home fixed intro text h1 and background

--- a/public/complements/styles/home.css
+++ b/public/complements/styles/home.css
@@ -64,7 +64,9 @@
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
-    background-color: var(--color-black);
+    background-color: rgba(0, 0, 0, 0.5); /* Fondo negro con 50% de transparencia */
+    backdrop-filter: blur(10px); /* Ajusta el valor de blur según tu preferencia */
+    -webkit-backdrop-filter: blur(10px); /* Soporte para navegadores WebKit */
     border-bottom: 1px solid var(--color-grey);
   }
   
@@ -112,8 +114,12 @@
     list-style: none;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
     z-index: 1000;
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(10px);
+    transition: opacity 0.3s ease, transform 0.3s ease, visibility 0.3s;
   }
-  
+
   nav ul li .dropdown li {
     width: 200px;
   }
@@ -130,6 +136,14 @@
   
   nav ul li:hover .dropdown {
     display: block;
+    opacity: 1;
+    visibility: visible;
+    transform: translateY(0);
+  }
+
+  .home {
+    background-image: url(../styles/images/background.png);
+    background-size: cover;
   }
   
   .intro {
@@ -139,6 +153,7 @@
     height: 100vh;
     padding-top: 22rem; /* Ajusta según tu diseño */
     color: var(--color-white);
+  
 }
 
 
@@ -146,7 +161,7 @@
 .intro-text {
   width: 45%; /* Ajusta el ancho del texto según tu diseño */
   margin-left: 5%; /* Mueve el contenido hacia la izquierda */
-  margin-top: 3%; /* Ajusta según tu diseño */
+  margin-top: 5%; /* Ajusta según tu diseño */
 }
   
   .intro-text h1 {
@@ -158,6 +173,9 @@
     /* Estilo adicional para el cursor */
     border-right: 4px solid var(--color-white); /* Efecto cursor */
     margin-bottom: 1rem;
+    display: inline-block;
+  max-width: fit-content;
+    
   }
   
   @keyframes typing {
@@ -169,6 +187,17 @@
     from, to { border-color: transparent; }
     50% { border-color: var(--color-white) }
   }
+
+  @keyframes typing-finished {
+    from { border-right-color: var(--color-white); }
+    to { border-right-color: transparent; }
+}
+
+.intro-text h1.typing-finished {
+    animation: blink-caret 0.75s step-end infinite, typing-finished 0.5s forwards;
+}
+
+
   
   
   
@@ -183,6 +212,7 @@
   
   .buttons .btn {
     background-color: var(--color-main);
+    font-family: "matter-medium";
     color: var(--color-white);
     padding: 10px 20px;
     text-decoration: none;
@@ -235,7 +265,7 @@
 
   /* Agrega al final de tu archivo CSS */
 .section-header {
-  padding-top: 10%;
+  padding-top: 12%;
   text-align: center;
   margin: 50px 0;
 }
