--- a/public/complements/styles/home.css
+++ b/public/complements/styles/home.css
@@ -10,6 +10,12 @@
     font-family: "matter-medium";
     src: url("./fonts/matter-font/Matter-Medium.ttf") format("truetype");
   }
+
+  @font-face {
+    font-family: "matter-regular";
+    src: url("./fonts/matter-font/Matter-Regular.ttf") format("truetype");
+  }
+  
   
   @font-face {
     font-family: "aero";
@@ -39,10 +45,6 @@
     scroll-behavior: smooth;
   }
 
-
-  html {
-    scroll-behavior: smooth;
-}
   body {
     margin: 0;
     padding: 0;
@@ -203,7 +205,7 @@
   
   .intro-text p {
     font-size: 1.2em;
-    font-family: "matter-medium";
+    font-family: "matter-regular";
   }
   
   .buttons {
@@ -265,15 +267,21 @@
 
   /* Agrega al final de tu archivo CSS */
 .section-header {
-  padding-top: 12%;
   text-align: center;
   margin: 50px 0;
 }
 
 .section-header h2 {
-  font-size: 2.5em;
+  font-size: 1.1rem;
   font-family: "arame";
   color: var(--color-main);
+  background: linear-gradient(40deg, #333 45%, #151414 100%);
+  border: 1px solid #454545;
+  padding: 0px 20px; /* Ajusta el padding según sea necesario */
+  border-radius: 5px; /* Ajusta el valor para redondear más o menos las esquinas */
+  display: inline-block; /* Asegura que el fondo se ajuste al contenido del h2 */
+  padding-bottom: 7px;
+
 }
 
 .section-content {
@@ -288,12 +296,15 @@
   margin: 50px 0;
   padding: 20px;
   width: 80%;
-  border: 1px solid var(--color-grey);
   border-radius: 10px;
 }
 
 .text-image-block:nth-child(even) {
   flex-direction: row-reverse;
+}
+
+.text-image-block.who-for {
+  flex-direction: row-reverse; /* Invertir la dirección de los elementos solo para "who-for" */
 }
 
 .text {
@@ -302,15 +313,33 @@
 }
 
 .text h3 {
-  font-size: 1.8em;
-  font-family: "arame";
+  font-size: 2.8em;
+  font-family: "matter-medium";
   margin-bottom: 20px;
+  background: linear-gradient(40deg, #333 45%, #151414 100%);
+  border: 1px solid #454545;
+  padding: 0px 20px; /* Ajusta el padding según sea necesario */
+  border-radius: 5px; /* Ajusta el valor para redondear más o menos las esquinas */
+  display: inline-block; /* Asegura que el fondo se ajuste al contenido del h2 */
+  padding-bottom: 7px;
 }
 
 .text p {
   font-size: 1.2em;
-  font-family: "matter-medium";
+  font-family: "matter-regular";
 }
+
+.text ul {
+  font-size: 1em;
+  margin-top: 10px;
+  margin-left: 15px;
+}
+
+.text ul li {
+  margin-bottom: 10px;
+  font-family: "matter-regular";
+}
+
 
 .image {
   flex: 1;
@@ -326,4 +355,8 @@ hr {
   width: 80%;
   margin: 50px auto;
   border: 1px solid var(--color-grey);
+}
+
+#about {
+  
 }
