--- a/public/complements/styles/home.css
+++ b/public/complements/styles/home.css
@@ -357,6 +357,35 @@ hr {
   border: 1px solid var(--color-grey);
 }
 
-#about {
-  
+#profiles {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.profile {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 20px;
+}
+
+.profile img {
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+}
+
+.profile a {
+  margin-top: 10px;
+  font-family: "matter-regular";
+  font-size: 1em;
+  text-decoration: none;
+  color: var(--color-main);
+}
+
+#creators {
+  display: flex;
+  justify-content: center;
+  text-align: center;
 }
