--- a/public/complements/styles/home.css
+++ b/public/complements/styles/home.css
@@ -72,7 +72,7 @@
     border-bottom: 1px solid var(--color-grey);
   }
   
-  nav .logo {
+  nav .logo a {
     font-family: "aero";
     font-size: 2.5em;
     color: var(--color-main);
@@ -119,7 +119,7 @@
     opacity: 0;
     visibility: hidden;
     transform: translateY(10px);
-    transition: opacity 0.3s ease, transform 0.3s ease, visibility 0.3s;
+    transition: opacity 0.5s ease, transform 0.5s ease;
   }
 
   nav ul li .dropdown li {
@@ -138,10 +138,8 @@
   
   nav ul li:hover .dropdown {
     display: block;
-    opacity: 1;
-    visibility: visible;
-    transform: translateY(0);
-  }
+
+}
 
   .home {
     background-image: url(../styles/images/background.png);
@@ -168,6 +166,7 @@
   
   .intro-text h1 {
     font-size: 3em;
+    font-weight: 500;
     font-family: "arame";
     overflow: hidden; /* Para asegurar que el texto no se desborde */
     white-space: nowrap; /* Evita el salto de línea */
@@ -176,7 +175,8 @@
     border-right: 4px solid var(--color-white); /* Efecto cursor */
     margin-bottom: 1rem;
     display: inline-block;
-  max-width: fit-content;
+   max-width: fit-content;
+
     
   }
   
@@ -268,16 +268,16 @@
   /* Agrega al final de tu archivo CSS */
 .section-header {
   text-align: center;
-  margin: 50px 0;
+  margin: 50px ;
 }
 
 .section-header h2 {
-  font-size: 1.1rem;
-  font-family: "arame";
+  font-size: 1rem;
+  font-family: "matter-medium";
   color: var(--color-main);
   background: linear-gradient(40deg, #333 45%, #151414 100%);
   border: 1px solid #454545;
-  padding: 0px 20px; /* Ajusta el padding según sea necesario */
+  padding: 5px 20px; /* Ajusta el padding según sea necesario */
   border-radius: 5px; /* Ajusta el valor para redondear más o menos las esquinas */
   display: inline-block; /* Asegura que el fondo se ajuste al contenido del h2 */
   padding-bottom: 7px;
@@ -299,13 +299,7 @@
   border-radius: 10px;
 }
 
-.text-image-block:nth-child(even) {
-  flex-direction: row-reverse;
-}
 
-.text-image-block.who-for {
-  flex-direction: row-reverse; /* Invertir la dirección de los elementos solo para "who-for" */
-}
 
 .text {
   flex: 1;
@@ -313,16 +307,22 @@
 }
 
 .text h3 {
-  font-size: 2.8em;
+  font-size: 1rem;
   font-family: "matter-medium";
   margin-bottom: 20px;
   background: linear-gradient(40deg, #333 45%, #151414 100%);
   border: 1px solid #454545;
-  padding: 0px 20px; /* Ajusta el padding según sea necesario */
+  padding: 5px 20px; /* Ajusta el padding según sea necesario */
   border-radius: 5px; /* Ajusta el valor para redondear más o menos las esquinas */
   display: inline-block; /* Asegura que el fondo se ajuste al contenido del h2 */
   padding-bottom: 7px;
 }
+
+.text h4  {
+  font-size: 2.9em;
+  font-family: "matter-regular";
+  padding-bottom: 10px;
+}	
 
 .text p {
   font-size: 1.2em;
@@ -338,6 +338,12 @@
 .text ul li {
   margin-bottom: 10px;
   font-family: "matter-regular";
+}
+
+.text ul li span {
+  color: var(--color-main);
+  font-family: "matter-medium";
+  font-weight: 600;
 }
 
 
