--- a/public/complements/styles/home.css
+++ b/public/complements/styles/home.css
@@ -365,13 +365,153 @@
   border-radius: 10px;
 }
 
+
+.features-block {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+  background-color: var(--color-black);
+  padding: 0 14.5rem;
+  border-radius: 10px;
+  margin-top: 10px;
+  color: var(--color-white);
+}
+
+.features-block h3 {
+  grid-column: span 3;
+  margin-bottom: 20px;
+  font-family: "matter-regular";
+  font-size: 2.9em;
+}
+
+.feature-item {
+  display: flex;
+  align-items: center;
+  padding: 15px;
+  border-radius: 5px;
+}
+
+.feature-item .icon {
+  font-size: 1.5em;
+  margin-right: 10px;
+  background: linear-gradient(40deg, #333 45%, #151414 100%);
+  border: 1px solid #454545;
+  padding: 5px 10px;
+  border-radius: 5px;
+  display: inline-block;
+}
+
+.feature-text h4 {
+  margin: 0;
+  font-size: 1.1em;
+  font-family: "matter-medium";
+  color: var(--color-main);
+  font-weight: 600;
+}
+
+.feature-text p {
+  margin: 5px 0 0;
+  font-family: "matter-medium";
+}
+
+@media (max-width: 768px) {
+  .features-block {
+    grid-template-columns: 1fr;
+  }
+}
+
+
+#download {
+  background-color: var(--color-black);
+  padding: 40px 20px;
+  text-align: center;
+}
+
+#download .section-header h2 {
+  font-size: 2.5em;
+  color: var(--color-white);
+  margin-bottom: 20px;
+  font-family: "matter-regular";
+}
+
+#download .download-buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+}
+
+
+#download .main-button, #download .dropdown-button {
+  padding: 10px 15px;
+  border: none;
+  border-radius: 5px;
+  font-size: 1em;
+  cursor: pointer;
+  
+}
+
+#download .main-button {
+  background-color: var(--color-main);
+  color: var(--color-white);
+  font-family: "matter-medium";
+  transition: background-color 0.3s;
+}
+
+
+#download .dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+#download .dropdown-button {
+  background: linear-gradient(40deg, #333 45%, #151414 100%);
+  border: 1px solid #454545;
+  color: var(--color-white);
+  font-family: "matter-medium";
+}
+
+#download .dropdown-content {
+  display: none;
+  position: absolute;
+  background: linear-gradient(40deg, #333 45%, #151414 100%);
+  border: 1px solid #454545;
+  min-width: 160px;
+  z-index: 1;
+  border-radius: 5px;
+  margin-top: 3px;
+}
+
+#download .dropdown-content a {
+  color: var(--color-white);
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  font-family: "matter-regular";
+}
+
+#download .dropdown-content a:hover {
+  background-color: #575757;
+}
+
+#download .dropdown:hover .dropdown-content {
+  display: block;
+}
+
+
+
 hr {
   width: 80%;
   margin: 50px auto;
   border: 1px solid var(--color-grey);
 }
 
+.about {
 
+  background: linear-gradient(to top, rgba(255, 0, 0, 0.233), var(--color-black));
+  
+
+}
 
 #profiles {
   display: flex;
