--- a/public/complements/styles/home.css
+++ b/public/complements/styles/home.css
@@ -501,6 +501,52 @@
 
 
 
+.comments-section {
+  width: 100%;
+  overflow: hidden;
+  position: relative;
+}
+
+.comments-section h2 {
+  font-size: 2.9em;
+  font-family: "matter-regular";
+  text-align: center;
+  margin-bottom: 1rem;
+  padding-bottom: 1rem;
+}
+
+.comments-carousel {
+  display: flex;
+  width: max-content;
+  will-change: transform; /* Optimiza la animación */
+}
+
+.comment-card {
+  min-width: 300px;
+  margin-right: 20px;
+  background-color: var(--color-dark);
+  color: var(--color-white);
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+  flex-shrink: 0; /* Asegura que las tarjetas no se reduzcan */
+}
+
+.comment-card img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin-bottom: 15px;
+}
+
+.comment-card h3 {
+  margin: 0 0 10px 0;
+}
+
+.comment-card p {
+  margin: 0;
+}
+
 
 
 
