--- a/public/complements/styles/home.css
+++ b/public/complements/styles/home.css
@@ -281,6 +281,7 @@
   font-size: 1rem;
   margin-left: 1em;
   font-family: "matter-regular";
+  font-weight: lighter;
   color: var(--color-main);
   background: linear-gradient(40deg, #333 45%, #151414 100%);
   border: 1px solid #454545;
@@ -522,30 +523,44 @@
 }
 
 .comment-card {
-  min-width: 300px;
-  margin-right: 20px;
-  background-color: var(--color-dark);
+  display: flex;
+  align-items: center;
+  background: linear-gradient(40deg, #333 45%, #151414 100%);
+  border: 1px solid #454545;
   color: var(--color-white);
-  padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
-  flex-shrink: 0; /* Asegura que las tarjetas no se reduzcan */
+  border-radius: 8px;
+  padding: 15px;
+  margin-right: 15px;
+  min-width: 300px;
+  max-width: 450px;
 }
 
 .comment-card img {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  margin-bottom: 15px;
+  width: 50px; /* Ajusta el tamaño de la imagen */
+  height: 50px; /* Ajusta el tamaño de la imagen */
+  border-radius: 50%; /* Para hacer la imagen redonda */
+  margin-right: 15px; /* Espacio entre la imagen y el contenido */
 }
 
-.comment-card h3 {
-  margin: 0 0 10px 0;
+.comment-content {
+  display: flex;
+  flex-direction: column; /* Mantiene el título y el comentario en una columna */
 }
 
-.comment-card p {
+.comment-content h3 {
+  font-size: 1.2rem;
   margin: 0;
+  padding: 0;
+  font-family: "matter-regular";
 }
+
+.comment-content p {
+  margin-top: 5px;
+  font-size: 1rem;
+  font-family: "matter-regular";
+  color: #7e7a7a;
+}
+
 
 
 
