--- a/public/complements/styles/home.css
+++ b/public/complements/styles/home.css
@@ -135,8 +135,13 @@
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
-
+    background: transparent; /* Fondo transparente por defecto */
+    transition: background 0.3s ease; /* Transición suave para el cambio de color */
     z-index: 2000;
+}
+/* Estilo del navbar con fondo cambiado */
+.navbar-scrolled {
+  background: var(--color-grey); /* Fondo negro con opacidad */
 }
 
 .nav-left,
@@ -295,19 +300,6 @@ nav ul li:hover .dropdown {
   font-weight: lighter;
 }
 
-.section-header-download h2 {
-  font-size: 2.9em;
-  margin-left: 0.4em;
-  font-family: "neue-medium";
-  font-weight: lighter;
-  color: var(--color-white);
-  background: linear-gradient(40deg, #333 45%, #151414 100%);
-  border: 1px solid #454545;
-  padding: 5px 10px; /* Ajusta el padding según sea necesario */
-  border-radius: 5px; /* Ajusta el valor para redondear más o menos las esquinas */
-  display: inline-block; /* Asegura que el fondo se ajuste al contenido del h2 */
-  padding-bottom: 10px;
-}
 
 
 .section-content {
@@ -444,8 +436,9 @@ nav ul li:hover .dropdown {
 .features-block h3 {
   grid-column: span 3;
   margin-bottom: 20px;
-  font-family: "matter-regular";
+  font-family: "neue";
   font-size: 2.9em;
+  font-weight: lighter;
 }
 
 .feature-item {
@@ -467,16 +460,18 @@ nav ul li:hover .dropdown {
 
 .feature-text h4 {
   margin: 0;
-  font-size: 1.1em;
-  font-family: "matter-medium";
+  font-size: 1.9em;
+  font-family: "neue";
   color: var(--color-main);
   font-weight: lighter;
 }
 
 .feature-text p {
   margin: 5px 0 0;
-  font-family: "matter-medium";
+  font-size: 1.5em;
+  font-family: "neue";
   font-weight: lighter;
+  color: #575757;
 }
 
 @media (max-width: 768px) {
@@ -492,58 +487,6 @@ nav ul li:hover .dropdown {
 
 
 
-.comparison-section {
-  padding: 2rem;
-  background-color: var(--color-black);
-  color: var(--color-white);
-}
-
-.comparison-section h2 {
-  color: var(--color-white);
-  font-size: 2.9em;
-  font-family: "matter-regular";
-  text-align: center;
-  margin-bottom: 1rem;
-  padding-bottom: 1rem;
-}
-
-.comparison-section p,
-.comparison-section ul {
-  text-align: center;
-  margin-bottom: 1rem;
-  font-family: "matter-regular";
-}
-
-.comparison-table {
-  width: 60%;
-  border-collapse: collapse;
-  margin: 0 auto;
-  background-color: #1d1c1c;
-}
-
-.comparison-table th,
-.comparison-table td {
-  border: 1px solid var(--color-grey);
-  padding: 0.5rem;
-  text-align: center;
-  font-family: "matter-regular";
-}
-
-.comparison-table th {
-  background-color: var(--color-main);
-  color: var(--color-white);
-}
-
-.comparison-table .yes {
-  font-size: 1.5rem;
-  color: yellowgreen;
-
-}
-
-.comparison-table .no {
-  font-size: 1.5rem;
-  color: var(--color-main)
-}
 
 
 
@@ -552,13 +495,14 @@ nav ul li:hover .dropdown {
   width: 100%;
   overflow: hidden;
   position: relative;
-  height: 30vh;
+  height: auto; /* Ajusta la altura automáticamente según el contenido */
   background: radial-gradient(circle, #96232369  1%,  var(--color-black) 15%);
-  }
+}
 
 .comments-section h2 {
   font-size: 2.9em;
-  font-family: "matter-regular";
+  font-family: "neue";
+  font-weight: lighter;
   text-align: center;
   margin-bottom: 1rem;
   padding-bottom: 1rem;
@@ -566,8 +510,9 @@ nav ul li:hover .dropdown {
 
 .comments-carousel {
   display: flex;
-  width: max-content;
-  will-change: transform; /* Optimiza la animación */
+  flex-wrap: wrap; /* Permite que las tarjetas se ajusten a varias filas */
+  justify-content: center; /* Centra las tarjetas horizontalmente */
+  gap: 15px; /* Espacio entre las tarjetas */
 }
 
 .comment-card {
@@ -578,9 +523,9 @@ nav ul li:hover .dropdown {
   color: var(--color-white);
   border-radius: 8px;
   padding: 15px;
-  margin-right: 15px;
-  min-width: 300px;
-  max-width: 450px;
+  min-width: 300px; /* Tamaño mínimo de las tarjetas */
+  max-width: 450px; /* Tamaño máximo de las tarjetas */
+  box-sizing: border-box; /* Incluye padding y border en el tamaño total */
 }
 
 .comment-card img {
@@ -596,18 +541,20 @@ nav ul li:hover .dropdown {
 }
 
 .comment-content h3 {
-  font-size: 1.2rem;
+  font-size: 1.6em;
   margin: 0;
   padding: 0;
-  font-family: "matter-regular";
+  font-family: "neue";
+  font-weight: lighter;
 }
 
 .comment-content p {
   margin-top: 5px;
-  font-size: 1rem;
-  font-family: "matter-regular";
+  font-size: 1.5em;
+  font-family: "neue";
   color: #7e7a7a;
 }
+
 
 
 
@@ -815,7 +762,7 @@ hr {
 
 .profile a {
   margin-top: 10px;
-  font-family: "matter-regular";
+  font-family: "neue";
   font-size: 1em;
   font-weight: 600;
   text-decoration: none;
@@ -823,14 +770,14 @@ hr {
 }
 
 .profile p {
-  font-family: "matter-regular";
+  font-family: "neue";
   font-size: 0.9em;
   color: var(--color-secondary);
   margin: 10px 0;
 }
 
 .profile .followers {
-  font-family: "matter-regular";
+  font-family: "neue";
   font-size: 0.9em;
   color: var(--color-secondary);
   margin: 10px 0;
