--- a/public/complements/styles/home.css
+++ b/public/complements/styles/home.css
@@ -94,6 +94,16 @@
     scroll-padding-top: 70px;
   }
 
+  .cursor {
+    pointer-events: none;
+    position: absolute;
+    padding: 0.9vw;
+    border: 2px solid var(--color-white);
+    border-radius: 50%;
+    z-index: 9000;
+    transition: transform 0.1s ease;
+  }
+
 /* Clase para ocultar elementos por defecto */
 .hidden {
   opacity: 0;
@@ -362,9 +372,9 @@
   position: absolute;
   width: 50rem;
   bottom: 5%; /* Ajusta este valor para mover el texto más arriba o más abajo */
-  left: 5%; /* Ajusta este valor para mover el texto más hacia la derecha o izquierda */
+  right: 2%; /* Ajusta este valor para mover el texto más hacia la derecha o izquierda */
   font-size: 1.2em;
-  color: #a8a8a8;
+  color: #888787;
   font-family: "neue";
 }
 
@@ -402,7 +412,7 @@
 .section-header h2 {
   font-size: 8.2em;
   font-family: "schabo";
-  color: #575757;
+  color: #bb0f0f;
   font-weight: lighter;
 }
 
@@ -426,8 +436,9 @@
 
 
 .text {
-  flex: 1;
-  margin: 0 20px;
+
+  position: relative; /* Necesario para el subrayado absoluto */
+  overflow: hidden; /* Oculta el subrayado cuando no está en vista */
 }
 
 .text h3 {
@@ -438,12 +449,32 @@
   color: #575757;
 }
 
-.text h4  {
+
+/* Animación de entrada para el texto */
+.text h4 {
+  position: relative;
+  display: inline-block;
+  margin: 0;
   font-size: 3.2em;
   font-family: "neue";
   padding-bottom: 10px;
   font-weight: lighter;
+  opacity: 0; /* Empieza oculto */
+  transform: translateX(-200px); /* Empieza desde la izquierda */
+  transition: opacity 0.9s ease-out, transform 0.9s ease-out;
 }
+
+
+/* Clase para mostrar los elementos con animación */
+.text.visible h4 {
+  opacity: 1;
+  transform: translateX(0); /* Mueve el elemento a su posición final */
+}
+
+.text.visible h4::after {
+  transform: scaleX(1); /* Expande el subrayado hasta su tamaño final */
+}
+
 
 .text p {
   font-size: 2em;
@@ -544,14 +575,16 @@
 
 
 
+.about {
 
-
+}
 
 .comments-section {
   width: 100%;
   overflow: hidden;
   position: relative;
   height: 110vh;
+
 }
 
 .comments-section h2 {
@@ -575,7 +608,7 @@
 
 .comment-card {
   position: absolute;
-  background: linear-gradient(40deg, #333 45%, #151414 100%);
+  background: #bb0f0f;
   color: var(--color-white);
   border-radius: 8px;
   padding: 15px;
@@ -595,7 +628,7 @@
 .comment-content p {
   font-size: 1.5em;
   font-family: "neue";
-  color: #7e7a7a;
+  color: #f3f2f2d0;
 }
 
 .comment-content h3 {
